<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cookbook</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search_recipe">Search recipes...</string>
    <string name="search_recipes_label">Search Recipes!</string>
    <string name="exit_setting">Exit</string>
    <string name="random_food_fact">Random Food Fact</string>
    <string name="back">Back</string>
    <string name="add_favourite">Add to favourites</string>
    <string name="remove_favourite">Remove favourite</string>
    <string name="loading">Loading...</string>
    <string name="set_alarm">Set alarm</string>
    <string name="send_to_ai">Send to AI</string>

</resources>