<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="0dp"

        android:translationY="200dp">

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"

            android:alpha="0.4"

            android:background="@drawable/rounded_corners"


            android:queryHint="@string/search_recipe"
            app:showAsAction="always"


            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/suggestionRecyclerView"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_below="@id/search_view"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:alpha="0.6"
            android:minHeight="5dp"
            android:scrollbars="vertical"
            android:translationZ="100dp"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/search_recipes_label"
        android:textAlignment="center"
        android:textSize="30sp"
        android:translationY="150dp" />


    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="172dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical"
        android:translationY="550dp"
        android:elevation="8dp"
        >

        <TextView
            android:id="@+id/FunFactTextView2"
            android:layout_width="342dp"
            android:layout_height="152dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-light"
            android:textAlignment="center"
            android:translationY="10dp"
            android:autoSizeTextType="uniform"/>



</LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/random_food_fact"
        android:textAlignment="center"
        android:textSize="25sp"
        android:translationY="505dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="63dp"
        android:layout_height="57dp"
        android:translationZ="100dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <ImageButton
        android:id="@+id/button_favorites"
        android:layout_width="63dp"
        android:layout_height="57dp"
        android:translationZ="100dp"
        android:translationX="70dp"
        android:src="@drawable/favourite"
        android:background="?attr/selectableItemBackgroundBorderless" />

    <ImageButton
        android:id="@+id/button_timer"
        android:layout_width="63dp"
        android:layout_height="57dp"
        android:translationZ="100dp"
        android:translationX="140dp"
        android:src="@drawable/timer"
        android:background="?attr/selectableItemBackgroundBorderless" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>